--- a/HW4/css/why-cga.css
+++ b/HW4/css/why-cga.css
@@ -59,17 +59,18 @@
 }
 
 .row2 .col .btn-wrap {
-  margin-top: 20px;
+  margin: 20px 0px;
   height: 30%;
 }
 
 .row2 .col .btn-wrap .btn {
-  height: 100%;
   background-color: #0ca579;
   padding: 10px;
+  font-family: "Product Sans";
   font-weight: bolder;
+  font-size: 16px;
   border-radius: 2%;
-  text-decoration: none;
+  border-style: none;
   color: black;
 }
 
